# fmincl

./: CMakeLists.txt  LICENSE  README.md  index.html  params.json
cmake/: FindATIDLAS.cmake  FindISAAC.cmake  FindOpenBlas.cmake
common/: beale.hpp  freudenstein-roth.hpp  powell-badly-scaled.hpp  rosenbrock.hpp
cs281/: neural-network.graphviz  predict.py  rosenbrock.py
cs281/plots/: numerical-experiments.py
examples/: CMakeLists.txt  README  mnist.cpp  neural-network-mnist.cpp  rosenbrock-cblas.cpp  rosenbrock-openblas.cpp  rosenbrock.cpp  timer.hpp
fmincl/: backend.hpp  check_grad.hpp  directions.hpp  line_search.hpp  mapping.hpp  minimize.hpp  optimization_options.hpp  optimization_otions.hpp  stopping_criterion.hpp  utils.hpp  verbosity.hpp
fmincl/backends/: blas.hpp  cblas.hpp  eigen.hpp  openblas.hpp
fmincl/directions/: cg.hpp  conjugate_gradient.hpp  forwards.h  quasi-newton.hpp  quasi_newton.hpp  steepest_descent.hpp
fmincl/directions/quasi_newton/: updates.hpp
fmincl/line_search/: compute_step.hpp  forwards.h  interpolate.hpp  phi_fun.hpp  strong_wolfe_powell.hpp  termination.hpp  utils.hpp
fmincl/stopping_criterion/: forwards.h  gradient_treshold.hpp  value_treshold.hpp
fmincl/tools/: shared_ptr.hpp  typelist.hpp
tests/: CMakeLists.txt  cg.cpp  conjugate-gradients.cpp  directions-cblas.cpp  directions-eigen.cpp  directions-openblas.cpp  directions.cpp  directions_impl.hpp  linear-conjugate-gradients.cpp  low-memory-quasi-newton.cpp  minimize.cpp  nonlinear-conjugate-gradients.cpp  obj_fun.hpp  quasi-newton.cpp  rosenbrock.hpp  test-common.hpp  test-functions.cpp  truncated-newton.cpp
tests/mghfuns/: beale.hpp  biggs_exp6.hpp  box_3d.hpp  brown_badly_scaled.hpp  brown_dennis.hpp  freudenstein_roth.hpp  gaussian.hpp  gulf.hpp  helical_valley.hpp  jenrich_sampson.hpp  meyer.hpp  penalty1.hpp  penalty2.hpp  powell_badly_scaled.hpp  powell_singular.hpp  rosenbrock.hpp  sum_square.hpp  trigonometric.hpp  variably_dimensioned.hpp  watson.hpp  wood.hpp
umintl/: check_grad.hpp  debug.hpp  evaluation_policies.hpp  forwards.h  function_wrapper.hpp  mapping.hpp  minimize.hpp  model_base.hpp  optimization_context.hpp  optimization_options.hpp  optimization_result.hpp  tags.hpp  utils.hpp
umintl/backends/: blas.hpp  cblas.hpp  eigen.hpp
umintl/directions/: conjugate_gradient.hpp  forwards.h  low_memory_quasi_newton.hpp  quasi_newton.hpp  steepest_descent.hpp  truncated_newton.hpp
umintl/hessian-vector_product/: centered_difference.hpp  forward_difference.hpp  forwards.h  provided_function.hpp
umintl/hessian_free/: hessian_vector_product_policies.hpp  solver.hpp
umintl/line_search/: forwards.h  strong_wolfe_powell.hpp
umintl/linear/: conjugate_gradient.hpp
umintl/mghfuns/: beale.hpp  biggs_exp6.hpp  box_3d.hpp  brown_badly_scaled.hpp  brown_dennis.hpp  freudenstein_roth.hpp  gaussian.hpp  gulf.hpp  helical_valley.hpp  jenrich_sampson.hpp  meyer.hpp  penalty1.hpp  penalty2.hpp  powell_badly_scaled.hpp  powell_singular.hpp  rosenbrock.hpp  sum_square.hpp  trigonometric.hpp  variably_dimensioned.hpp  watson.hpp  wood.hpp
umintl/model_type/: deterministic.hpp  forwards.h  stochastic.hpp
umintl/stopping_criterion/: forwards.h  gradient_treshold.hpp  parameter_change_threshold.hpp  value_treshold.hpp
umintl/tools/: exception.hpp  is_call_possible.hpp  shared_ptr.hpp
(+26 files in other folders)
