set(FUNCTIONS_PATH ${CMAKE_SOURCE_DIR}/common)
foreach(F conjugate-gradients quasi-newton low-memory-quasi-newton test-functions)
    add_executable(${F}-test ${F}.cpp)
    target_link_libraries(${F}-test openblas)
    set_target_properties(${F}-test PROPERTIES COMPILE_FLAGS "-DDISABLE_WARNING")
    add_test(${F} ${F}-test)
endforeach(F)
